--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,15 @@ services:
     build:
       context: ./user-service
       dockerfile: Dockerfile
+    depends_on:
+      postgres-users:
+        condition: service_healthy
+        restart: true
     ports:
       - 3000:3000
     environment:
-      - DATABASE_URL=postgresql://administrator:12345678@postgres-users:5432/users_db
+      - NODE_ENV=production
+      - PROD_DATABASE_URL=postgresql://administrator:12345678@postgres-users:5432/users_db
       - RABBITMQ_URL=amqp://administrator:12345678@rabbitmq:5672
       - SERVICE_PORT=3000
     volumes:
@@ -14,6 +19,11 @@ services:
       - /usr/src/app/node_modules
   postgres-users:
     image: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: always
     shm_size: 128mb
     ports:
@@ -26,20 +36,30 @@ services:
       - ./postgres/users:/var/lib/postgresql/data
   user-action-service:
     build:
-      context: ./user-service
+      context: ./user-action-service
       dockerfile: Dockerfile
+    depends_on:
+      postgres-user-actions:
+        condition: service_healthy
+        restart: true
     ports:
       - 3001:3001
     environment:
-      - DATABASE_URL=postgresql://administrator:12345678@postgres-user-actions:5432/actions_db
+      - NODE_ENV=production
+      - PROD_DATABASE_URL=postgresql://administrator:12345678@postgres-user-actions:5432/actions_db
       - RABBITMQ_URL=amqp://administrator:12345678@rabbitmq:5672
       - SERVICE_PORT=3001
     volumes:
-      - ./user-service:/usr/src/app
+      - ./user-action-service:/usr/src/app
       - /usr/src/app/node_modules
   postgres-user-actions:
     image: postgres
     restart: always
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     shm_size: 128mb
     ports:
       - 5433:5432
@@ -56,6 +76,22 @@ services:
       - 15672:15672
     environment:
       - RABBITMQ_DEFAULT_USER=administrator
-      - RABBITMQ_DEFAULT_USER=12345678
-    valumes:
+      - RABBITMQ_DEFAULT_PASS=12345678
+    volumes:
       - ./rabbitmq:/var/lib/rabbitmq
+  user-service-nestjs:
+    build:
+      context: ./user-service-nestjs
+      dockerfile: Dockerfile
+    depends_on:
+      postgres-users:
+        condition: service_healthy
+        restart: true
+    ports:
+      - 3002:3002
+    environment:
+      - DATABASE_URL=postgresql://administrator:12345678@postgres-users:5432/users_db
+      - SERVICE_PORT=3002
+    volumes:
+      - ./user-service-nestjs:/usr/src/app
+      - /usr/src/app/node_modules
