--- a/user-action-service/package.json
+++ b/user-action-service/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "npx jest --detectOpenHandles",
+    "start:dev:test": "npm run test && nodemon server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "Artem Malyugin",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@types/jest": "^29.5.12",
     "amqplib": "^0.10.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
@@ -20,8 +22,10 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "@types/sequelize": "^4.28.20",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "sequelize-cli": "^6.6.2",
-    "@types/sequelize": "^4.28.20"
+    "supertest": "^7.0.0"
   }
 }
