--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "npx jest --detectOpenHandles",
+    "start:dev:test": "npm run test && nodemon server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "Artem Malyugin",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "@types/sequelize": "^4.28.20",
     "amqplib": "^0.10.4",
     "cors": "^2.8.5",
@@ -22,7 +24,9 @@
   },
   "devDependencies": {
     "@types/sequelize": "^4.28.20",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0"
   }
 }
