--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -90,6 +90,7 @@ services:
     ports:
       - 3002:3002
     environment:
+      - NODE_ENV=production
       - DATABASE_URL=postgresql://administrator:12345678@postgres-users:5432/users_db
       - SERVICE_PORT=3002
     volumes:
